--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2",
